Made it so the page has a more constant layout. Elements no longer slide under each other when resized and all text remains readable at any size.

--- a/project2/styles.css
+++ b/project2/styles.css
@@ -5,6 +5,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*Prevents Page from overlapping elements.*/
+/*https://stackoverflow.com/questions/14553273/how-can-i-prevent-html-elements-from-overlapping-or-sliding-under-one-another*/
+html {
+min-width: 950px;
+position: relative;
+}
 
 body {
     background-color: #24272e;
@@ -23,7 +29,8 @@ header>h1 {
     font-size: 20px;
 }
 
-#score-number {
+.score-number {
+    position: absolute;
     transform: translateY(-100%);
     margin-left: 4%;
 }
@@ -40,17 +47,23 @@ header>h1 {
 }
 
 /* via https://stackoverflow.com/a/66251864/14979054 */
-table {
+.playing-field {
     position: absolute;
-    top: 40%;
+    /*top: 40%;*/
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-x:auto;
+    margin-left: auto;
+    margin-top: -12%;
+    margin-right: auto;
+    
 }
 
 #rules-field {
     text-align: right;
-    padding: 10px;
+    padding: 50px;
     margin-top: -25%;
     margin-left: 65%;
     margin-right: 10%;
 }
+
